# directcpp

./: .gitignore  Cargo.toml  README.md  build.rs
directcpp/: Cargo.toml
directcpp/src/: lib.rs
macro/: Cargo.toml  README.md  build.rs
macro/src/: bridge.cpp  buildcode.rs  code_match.rs  lib.rs  mangle.rs  parse.rs  tests.rs  util.rs
res/rust/: rust-common.h  rust-spt.h
src/: lib.rs
test_proj/: Cargo.toml  Makefile  build.rs  test_cpp.sln  test_cpp.vcxproj  test_cpp.vcxproj.filters  test_directcpp.vcxproj  test_directcpp.vcxproj.filters
test_proj/cpp/: prove.cpp  rust_spt.h
test_proj/src/: main.rs
tools/: rust2h.py  update_version.py
