[package]
name = "directcpp"
version = "0.1.4"
categories = ["development-tools::ffi", "api-bindings"]
description = "Direct call cpp from Rust"
edition = "2021"
homepage = "https://github.com/swigger/directcpp"
keywords = ["ffi", "c++", "cpp"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swigger/directcpp"
rust-version = "1.77"

[dependencies]
directcpp-macro = { path="macro", version = "0.1.4" }
