[lib]
proc-macro = true

[package]
name = "directcpp-macro"
version = "0.1.5"
categories = ["development-tools::ffi", "api-bindings"]
description = "Direct call cpp from Rust (proc-macro)"
edition = "2021"
homepage = "https://github.com/swigger/directcpp"
keywords = ["ffi", "c++", "cpp"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swigger/directcpp"
rust-version = "1.76"

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.58"
regex = "1.10.4"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0.83"
