[package]
name = "test_directcpp"
version = "0.1.7"
description = "test project for directcpp"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swigger/directcpp"
rust-version = "1.76"

[dependencies]
directcpp={path=".."}
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
log = "0.4.21"

[build-dependencies]
cc = "1.0.83"
